TERRAFORM/MOD06B.tf
## LAB-06-B-LOAD-BALANCER
locals {
  lab06b_lb_feip_name          = "${local.lab06b_name}-lb-pip-config-${local.random_str}"
  lab06b_lb_bepool_name        = "${local.lab06b_name}-lb-bepool-${local.random_str}"
  lab06b_lb_probe_name         = "${local.lab06b_name}-lb-probe-${local.random_str}"
  lab06b_lb_rule_name          = "${local.lab06b_name}-lb-rule-${local.random_str}"
  lab06b_lb_outbound_rule_name = "${local.lab06b_name}-lb-outbound-rule-${local.random_str}"
}

resource "azurerm_virtual_network" "lab06b" {
  name                = "${local.lab06b_name}-vnet-${local.random_str}"
  address_space       = ["10.10.0.0/16"]
  location            = azurerm_resource_group.az104.location
  resource_group_name = azurerm_resource_group.az104.name
  tags                = local.default_tags
}

resource "azurerm_subnet" "lab06b" {
  name                 = "default"
  resource_group_name  = azurerm_resource_group.az104.name
  virtual_network_name = azurerm_virtual_network.lab06b.name
  address_prefixes     = ["10.10.1.0/24"]
}

resource "azurerm_public_ip" "lab06b" {
  name                = "${local.lab06b_name}-lb-pip-${local.random_str}"
  location            = azurerm_resource_group.az104.location
  resource_group_name = azurerm_resource_group.az104.name
  allocation_method   = "Static"
  sku                 = "Standard"
  domain_name_label   = "${local.lab06b_name}-lb-pip-${local.random_str}"
  tags                = local.default_tags

  lifecycle {
    ignore_changes        = [ip_tags]
    create_before_destroy = true
  }
}

resource "azurerm_lb" "lab06b" {
  name                = "${local.lab06b_name}-lb-${local.random_str}"
  location            = azurerm_resource_group.az104.location
  resource_group_name = azurerm_resource_group.az104.name
  sku                 = "Standard"

  frontend_ip_configuration {
    name                 = local.lab06b_lb_feip_name
    public_ip_address_id = azurerm_public_ip.lab06b.id
  }
  tags = local.default_tags
}

resource "azurerm_lb_backend_address_pool" "lab06b" {
  loadbalancer_id = azurerm_lb.lab06b.id
  name            = local.lab06b_lb_bepool_name
}

resource "azurerm_lb_probe" "lab06b" {
  loadbalancer_id     = azurerm_lb.lab06b.id
  name                = local.lab06b_lb_probe_name
  port                = 80
  interval_in_seconds = 5
}

resource "azurerm_lb_rule" "lab06b" {
  loadbalancer_id                = azurerm_lb.lab06b.id
  name                           = local.lab06b_lb_rule_name
  protocol                       = "Tcp"
  frontend_port                  = 80
  backend_port                   = 80
  frontend_ip_configuration_name = local.lab06b_lb_feip_name
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.lab06b.id]
  probe_id                       = azurerm_lb_probe.lab06b.id
  disable_outbound_snat          = true
}

# 入站規則關閉 SNAT 後,後端 VM 需要明確的 outbound rule 才能連外,
# 也是 Network Watcher 連線監視「VM → Internet」測試成立的前提。
resource "azurerm_lb_outbound_rule" "lab06b" {
  name                     = local.lab06b_lb_outbound_rule_name
  loadbalancer_id          = azurerm_lb.lab06b.id
  backend_address_pool_id  = azurerm_lb_backend_address_pool.lab06b.id
  protocol                 = "All"
  allocated_outbound_ports = 1024
  idle_timeout_in_minutes  = 4

  frontend_ip_configuration {
    name = local.lab06b_lb_feip_name
  }
}

resource "azurerm_network_security_group" "lab06b" {
  name                = "${local.lab06b_name}-nsg-${local.random_str}"
  location            = azurerm_resource_group.az104.location
  resource_group_name = azurerm_resource_group.az104.name
  tags                = local.default_tags
}

resource "azurerm_network_security_rule" "lab06b" {
  name                        = "HTTP"
  priority                    = 110
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  source_address_prefix       = "*"
  destination_port_range      = "80"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.az104.name
  network_security_group_name = azurerm_network_security_group.lab06b.name
}

# Subnet-level NSG association for default subnet (shared with existing NSG)
resource "azurerm_subnet_network_security_group_association" "lab06b" {
  subnet_id                 = azurerm_subnet.lab06b.id
  network_security_group_id = azurerm_network_security_group.lab06b.id
}

resource "azurerm_network_interface" "lab06b01" {
  name                = "${local.lab06b_name}-nic-01-${local.random_str}"
  location            = azurerm_resource_group.az104.location
  resource_group_name = azurerm_resource_group.az104.name

  ip_configuration {
    name                          = "${local.lab06b_name}-nic-ipconfig-01-${local.random_str}"
    subnet_id                     = azurerm_subnet.lab06b.id
    private_ip_address_allocation = "Dynamic"
  }
  tags = local.default_tags
}

resource "azurerm_network_interface_security_group_association" "lab06b01" {
  network_interface_id      = azurerm_network_interface.lab06b01.id
  network_security_group_id = azurerm_network_security_group.lab06b.id
}

resource "azurerm_network_interface_backend_address_pool_association" "lab06b01" {
  network_interface_id    = azurerm_network_interface.lab06b01.id
  ip_configuration_name   = "${local.lab06b_name}-nic-ipconfig-01-${local.random_str}"
  backend_address_pool_id = azurerm_lb_backend_address_pool.lab06b.id
}

resource "azurerm_windows_virtual_machine" "lab06b01" {
  name                  = "${local.lab06b_name}-vm01-${local.random_str}"
  location              = azurerm_resource_group.az104.location
  resource_group_name   = azurerm_resource_group.az104.name
  network_interface_ids = [azurerm_network_interface.lab06b01.id]
  size                  = local.vm_size

  os_disk {
    name                 = "${local.lab06b_name}-osdisk-01-${local.random_str}"
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2022-Datacenter"
    version   = "latest"
  }

  computer_name  = "${local.lab06b_name}-vm01-${local.random_str}"
  admin_username = local.user_name
  admin_password = local.user_password

  identity {
    type = "SystemAssigned"
  }

  tags = local.default_tags
}

resource "azurerm_virtual_machine_extension" "lab06b01ama" {
  name                       = "AzureMonitorWindowsAgent"
  publisher                  = "Microsoft.Azure.Monitor"
  type                       = "AzureMonitorWindowsAgent"
  type_handler_version       = "1.0"
  automatic_upgrade_enabled  = true
  auto_upgrade_minor_version = true
  virtual_machine_id         = azurerm_windows_virtual_machine.lab06b01.id
  tags                       = local.default_tags
}

resource "azurerm_monitor_data_collection_rule_association" "lab06b01" {
  name                    = "lab06b01-dcra"
  target_resource_id      = azurerm_windows_virtual_machine.lab06b01.id
  data_collection_rule_id = azurerm_monitor_data_collection_rule.vminsights.id
  description             = "VM Insights DCR association for lab06b01"
}

resource "azurerm_monitor_data_collection_rule_association" "lab06b01_otel" {
  name                    = "lab06b01-otel-dcra"
  target_resource_id      = azurerm_windows_virtual_machine.lab06b01.id
  data_collection_rule_id = azapi_resource.vminsights_otel.id
  description             = "OpenTelemetry metrics DCR association for lab06b01"
}

resource "azurerm_virtual_machine_extension" "lab06b01script" {
  name                       = "${local.lab06b_name}-script-01-${local.random_str}"
  publisher                  = "Microsoft.Compute"
  type                       = "CustomScriptExtension"
  type_handler_version       = "1.10"
  auto_upgrade_minor_version = true
  virtual_machine_id         = azurerm_windows_virtual_machine.lab06b01.id

  settings = <<SETTINGS
    {
        "commandToExecute": "powershell.exe Install-WindowsFeature -name Web-Server -IncludeManagementTools && powershell.exe remove-item 'C:\\inetpub\\wwwroot\\iisstart.htm' && powershell.exe Add-Content -Path 'C:\\inetpub\\wwwroot\\iisstart.htm' -Value $('Hello World from ' + $env:computername) && powershell.exe Enable-NetFirewallRule -Name 'FPS-ICMP4-ERQ-In'"
    }
  SETTINGS
  tags     = local.default_tags
}

resource "azurerm_network_interface" "lab06b02" {
  name                = "${local.lab06b_name}-nic-02-${local.random_str}"
  location            = azurerm_resource_group.az104.location
  resource_group_name = azurerm_resource_group.az104.name

  ip_configuration {
    name                          = "${local.lab06b_name}-nic-ipconfig-02-${local.random_str}"
    subnet_id                     = azurerm_subnet.lab06b.id
    private_ip_address_allocation = "Dynamic"
  }
  tags = local.default_tags
}

resource "azurerm_network_interface_security_group_association" "lab06b02" {
  network_interface_id      = azurerm_network_interface.lab06b02.id
  network_security_group_id = azurerm_network_security_group.lab06b.id
}

resource "azurerm_network_interface_backend_address_pool_association" "lab06b02" {
  network_interface_id    = azurerm_network_interface.lab06b02.id
  ip_configuration_name   = "${local.lab06b_name}-nic-ipconfig-02-${local.random_str}"
  backend_address_pool_id = azurerm_lb_backend_address_pool.lab06b.id
}

resource "azurerm_windows_virtual_machine" "lab06b02" {
  name                  = "${local.lab06b_name}-vm02-${local.random_str}"
  location              = azurerm_resource_group.az104.location
  resource_group_name   = azurerm_resource_group.az104.name
  network_interface_ids = [azurerm_network_interface.lab06b02.id]
  size                  = local.vm_size

  os_disk {
    name                 = "${local.lab06b_name}-osdisk-02-${local.random_str}"
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2022-Datacenter"
    version   = "latest"
  }

  computer_name  = "${local.lab06b_name}-vm02-${local.random_str}"
  admin_username = local.user_name
  admin_password = local.user_password

  identity {
    type = "SystemAssigned"
  }

  tags = local.default_tags
}

resource "azurerm_virtual_machine_extension" "lab06b02ama" {
  name                       = "AzureMonitorWindowsAgent"
  publisher                  = "Microsoft.Azure.Monitor"
  type                       = "AzureMonitorWindowsAgent"
  type_handler_version       = "1.0"
  automatic_upgrade_enabled  = true
  auto_upgrade_minor_version = true
  virtual_machine_id         = azurerm_windows_virtual_machine.lab06b02.id
  tags                       = local.default_tags
}

resource "azurerm_monitor_data_collection_rule_association" "lab06b02" {
  name                    = "lab06b02-dcra"
  target_resource_id      = azurerm_windows_virtual_machine.lab06b02.id
  data_collection_rule_id = azurerm_monitor_data_collection_rule.vminsights.id
  description             = "VM Insights DCR association for lab06b02"
}

resource "azurerm_monitor_data_collection_rule_association" "lab06b02_otel" {
  name                    = "lab06b02-otel-dcra"
  target_resource_id      = azurerm_windows_virtual_machine.lab06b02.id
  data_collection_rule_id = azapi_resource.vminsights_otel.id
  description             = "OpenTelemetry metrics DCR association for lab06b02"
}

resource "azurerm_virtual_machine_extension" "lab06b02script" {
  name                       = "${local.lab06b_name}-script-02-${local.random_str}"
  publisher                  = "Microsoft.Compute"
  type                       = "CustomScriptExtension"
  type_handler_version       = "1.10"
  auto_upgrade_minor_version = true
  virtual_machine_id         = azurerm_windows_virtual_machine.lab06b02.id

  settings = <<SETTINGS
    {
        "commandToExecute": "powershell.exe Install-WindowsFeature -name Web-Server -IncludeManagementTools && powershell.exe remove-item 'C:\\inetpub\\wwwroot\\iisstart.htm' && powershell.exe Add-Content -Path 'C:\\inetpub\\wwwroot\\iisstart.htm' -Value $('Hello World from ' + $env:computername) && powershell.exe Enable-NetFirewallRule -Name 'FPS-ICMP4-ERQ-In'"
    }
  SETTINGS
  tags     = local.default_tags
}

resource "azurerm_monitor_diagnostic_setting" "lab06b_lb" {
  name                       = "lab06b-lb-diag"
  target_resource_id         = azurerm_lb.lab06b.id
  log_analytics_workspace_id = azurerm_log_analytics_workspace.vminsights.id

  enabled_log {
    category_group = "allLogs"
  }

  enabled_metric {
    category = "AllMetrics"
  }
}

resource "azurerm_monitor_diagnostic_setting" "lab06b_nsg" {
  name                       = "lab06b-nsg-diag"
  target_resource_id         = azurerm_network_security_group.lab06b.id
  log_analytics_workspace_id = azurerm_log_analytics_workspace.vminsights.id

  enabled_log {
    category_group = "allLogs"
  }
}

resource "azurerm_monitor_diagnostic_setting" "lab06b_pip" {
  name                       = "lab06b-pip-diag"
  target_resource_id         = azurerm_public_ip.lab06b.id
  log_analytics_workspace_id = azurerm_log_analytics_workspace.vminsights.id

  enabled_log {
    category_group = "allLogs"
  }

  enabled_metric {
    category = "AllMetrics"
  }
}

resource "azurerm_monitor_diagnostic_setting" "lab06b_vnet" {
  name                       = "lab06b-vnet-diag"
  target_resource_id         = azurerm_virtual_network.lab06b.id
  log_analytics_workspace_id = azurerm_log_analytics_workspace.vminsights.id

  enabled_log {
    category_group = "allLogs"
  }

  enabled_metric {
    category = "AllMetrics"
  }
}
